--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,9 +1,28 @@
 name: Postgres Service Example
-on: push
+
+on:
+  push:
+    branches:
+      - main  # 'main' branch uchun ishlaydi, kerak bo'lsa o'zgartirishingiz mumkin
 
 jobs:
   runner-job:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:13  # PostgreSQL 13 versiyasini ishlatamiz
+        env:
+          POSTGRES_USER: ${{ secrets.DB_USER }}   # GitHub Secrets orqali o'qiladi
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWD }}  # GitHub Secrets orqali o'qiladi
+          POSTGRES_DB: ${{ secrets.DB_NAME }}  # GitHub Secrets orqali o'qiladi
+        ports:
+          - 5432:5432  # PostgreSQL default port
+        options: >-
+          --health-cmd="pg_isready -U ${{ secrets.DB_USER }}"  # PostgreSQLni tayyorligini tekshiradi
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - name: Check out repository code
@@ -18,6 +37,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Set up environment variables
+        run: |
+          echo "DB_HOST=localhost" >> $GITHUB_ENV
+          echo "DB_PORT=5432" >> $GITHUB_ENV
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
+          echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
+          echo "DB_PASSWD=${{ secrets.DB_PASSWD }}" >> $GITHUB_ENV
 
       - name: Test with pytest
         run: |
