--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,11 +47,12 @@ jobs:
 
       - name: Wait for PostgreSQL to be ready
         run: |
-          while ! pg_isready -h localhost -p 5432 -U ${{ secrets.DB_USER }}; do
-            echo "Waiting for PostgreSQL to be ready..."
+          echo "Waiting for PostgreSQL to be ready..."
+          until pg_isready -h localhost -p 5432 -U ${{ secrets.DB_USER }}; do
             sleep 2
           done
+          echo "PostgreSQL is ready"
 
-      - name: Test with pytest
+      - name: Run tests with pytest
         run: |
-          pytest
+          pytest --maxfail=1 --disable-warnings -q
