--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,58 +1,40 @@
-name: Postgres Service Example
-on:
-  push:
-    branches:
-      - main  # 'main' branch uchun ishlaydi
-
+name: SQL Service Example
+on: push
 jobs:
   runner-job:
     runs-on: ubuntu-latest
-
     services:
       postgres:
-        image: postgres:13
+        image: postgres
         env:
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWD }}
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
-        ports:
-          - 5432:5432  # PostgreSQL default port
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 1
+          POSTGRES_DB: testdb
         options: >-
-          --health-cmd="pg_isready -U ${{ secrets.DB_USER }}"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Set up environment variables
+        env:
+          POSTGRES_HOST: ${{secrets.DB_HOST}}
+          POSTGRES_PORT: ${{secrets.DB_PORT}}
+          POSTGRES_USER: ${{secrets.DB_USER}}
+          POSTGRES_PASSWORD: ${{secrets.DB_PASSWD}}
+          POSTGRES_DB: ${{secrets.DB_NAME}}
+      - name: Test with pytest
         run: |
-          echo "DB_HOST=localhost" >> $GITHUB_ENV
-          echo "DB_PORT=5432" >> $GITHUB_ENV
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
-          echo "DB_USER=${{ secrets.DB_USER }}" >> $GITHUB_ENV
-          echo "DB_PASSWD=${{ secrets.DB_PASSWD }}" >> $GITHUB_ENV
-
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          echo "Waiting for PostgreSQL to be ready..."
-          until pg_isready -h localhost -p 5432 -U ${{ secrets.DB_USER }}; do
-            sleep 2
-          done
-          echo "PostgreSQL is ready"
-
-      - name: Run tests with pytest
-        run: |
-          pytest --maxfail=1 --disable-warnings -q
+          pytest
