Commit Last with global database

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: FastAPI CI
+name: Django CI
 
 on:
   push:
@@ -34,6 +34,9 @@ jobs:
           echo "DATABASE_HOST=${{ secrets.DATABASE_HOST }}" >> .env
           echo "DATABASE_PORT=${{ secrets.DATABASE_PORT }}" >> .env
 
+      - name: Run Migrations
+        run: |
+          python manage.py migrate
       - name: Run Tests
         run: |
           pytest
