--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,39 @@ jobs:
       - name: Run Tests
         run: |
           pytest
+
+  deploy_aiogram:
+    runs-on: ubuntu-latest
+    needs: django_ci
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Deploy FastAPI
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            set -e 
+            
+            REPO_DIR="~/app"
+
+            if [ ! -d "$REPO_DIR" ]; then
+              git clone https://github.com/theMirmakhmudov/FastAPI-Users-Task-v2.git $REPO_DIR
+            else
+              cd $REPO_DIR
+              git pull origin main
+            fi
+            cd $REPO_DIR
+            
+            
+            if [ ! -d "venv" ]; then
+              python3 -m venv venv
+            fi
+            source venv/bin/activate
+            pip install --upgrade pip
+            pip install -r requirements.txt
+            
