--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  django_ci:
+  fastapi_ci:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -27,9 +27,9 @@ jobs:
         run: |
           pytest
 
-  deploy_aiogram:
+  fastapi_cd:
     runs-on: ubuntu-latest
-    needs: django_ci
+    needs: fastapi_ci
 
     steps:
       - name: Checkout repository
