--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-
 jobs:
   fastapi_ci:
     runs-on: ubuntu-latest
@@ -27,9 +26,8 @@ jobs:
       - name: Run Tests
         run: |
           pytest
-          
 
-  fastapi_cd:
+  deploy_fastapi:
     runs-on: ubuntu-latest
     needs: fastapi_ci
 
