Commit Last with global database

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  django_ci:
+  fastapi_ci:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -27,9 +27,9 @@ jobs:
         run: |
           pytest
 
-  deploy_aiogram:
+  deploy_fastapi:
     runs-on: ubuntu-latest
-    needs: django_ci
+    needs: fastapi_ci
 
     steps:
       - name: Checkout repository
@@ -60,3 +60,6 @@ jobs:
             source venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
+
+            # Run FastAPI app (assuming you have a command for running your FastAPI server)
+            uvicorn main:app --host ${{secrets.SERVER_HOST}} --port 8000 --reload
