Commit Last with global database

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,7 +44,7 @@ jobs:
           script: |
             set -e 
             
-            REPO_DIR="${{secrets.SERVER_USER}}/FastAPI-Users-Task-v2"  # O'zgartirish: bu yerda repozitoriyani to'g'ri nomlash
+            REPO_DIR="fastapi-users"  # O'zgartirish: bu yerda repozitoriyani to'g'ri nomlash
 
             if [ ! -d "$REPO_DIR" ]; then
               git clone https://github.com/theMirmakhmudov/FastAPI-Users-Task-v2.git $REPO_DIR
