Commit Last with global database

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,7 +44,7 @@ jobs:
           script: |
             set -e 
             
-            REPO_DIR="fastapi-users"  # O'zgartirish: bu yerda repozitoriyani to'g'ri nomlash
+            REPO_DIR="."
 
             if [ ! -d "$REPO_DIR" ]; then
               git clone https://github.com/theMirmakhmudov/FastAPI-Users-Task-v2.git $REPO_DIR
@@ -53,8 +53,7 @@ jobs:
               git pull origin master
             fi
             cd $REPO_DIR
-
-            # Virtual muhit yaratish va o'rnatish
+            
             if [ ! -d "venv" ]; then
               python3 -m venv venv
             fi
@@ -62,5 +61,11 @@ jobs:
             pip install --upgrade pip
             pip install -r requirements.txt
 
-            # FastAPI serverini ishga tushurish
-            uvicorn main:app --host ${{secrets.SERVER_HOST}} --port 8001 --reload
+            # If necessary, restart your FastAPI app
+            # Assuming you're using uvicorn for serving the app
+            # This part should be updated based on how you manage your deployment
+            if pgrep -f "uvicorn"; then
+              pkill -f "uvicorn"
+            fi
+            nohup uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload &
+
