--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,26 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  fastapi_ci:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.12]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run Tests
-        run: |
-          pytest
-
   deploy_fastapi:
     runs-on: ubuntu-latest
     needs: fastapi_ci
@@ -43,17 +23,21 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             set -e 
-            
-            REPO_DIR="."
+
+            REPO_DIR="app"
 
             if [ ! -d "$REPO_DIR" ]; then
+              # Ensure the repo is cloned properly
               git clone https://github.com/theMirmakhmudov/FastAPI-Users-Task-v2.git $REPO_DIR
             else
+              # Ensure we're inside the repository directory
               cd $REPO_DIR
-              git pull origin master
+              git fetch --all
+              git reset --hard origin/master
             fi
+
             cd $REPO_DIR
-            
+
             if [ ! -d "venv" ]; then
               python3 -m venv venv
             fi
@@ -61,11 +45,8 @@ jobs:
             pip install --upgrade pip
             pip install -r requirements.txt
 
-            # If necessary, restart your FastAPI app
-            # Assuming you're using uvicorn for serving the app
-            # This part should be updated based on how you manage your deployment
+            # Restart FastAPI app using Uvicorn
             if pgrep -f "uvicorn"; then
               pkill -f "uvicorn"
             fi
             nohup uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload &
-
