Commit Last with global database

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
           script: |
             set -e 
 
-            REPO_DIR="app"
+            REPO_DIR="fastapi_users_v2"
 
             if [ ! -d "$REPO_DIR" ]; then
               # Ensure the repo is cloned properly
