--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,9 +7,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-  deploy_fastapi:
+  django_ci:
     runs-on: ubuntu-latest
-    needs: fastapi_ci
+    strategy:
+      matrix:
+        python-version: [3.12]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Tests
+        run: |
+          pytest
+
+  deploy_aiogram:
+    runs-on: ubuntu-latest
+    needs: django_ci
 
     steps:
       - name: Checkout repository
@@ -23,31 +43,20 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             set -e 
-
-            REPO_DIR="fastapi_users_v2"
+            
+            REPO_DIR="app"
 
             if [ ! -d "$REPO_DIR" ]; then
-              # Ensure the repo is cloned properly
               git clone https://github.com/theMirmakhmudov/FastAPI-Users-Task-v2.git $REPO_DIR
             else
-              # Ensure we're inside the repository directory
               cd $REPO_DIR
-              git fetch --all
-              git reset --hard origin/master
+              git pull origin master
             fi
-
             cd $REPO_DIR
-
+            
             if [ ! -d "venv" ]; then
               python3 -m venv venv
             fi
             source venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
-
-            # Restart FastAPI app using Uvicorn
-            if pgrep -f "uvicorn"; then
-              pkill -f "uvicorn"
-            fi
-            nohup uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload &
-            
