--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
 
   deploy_fastapi:
     runs-on: ubuntu-latest
-    needs: django_ci
+    needs: fastapi_ci
 
     steps:
       - name: Checkout repository
