Commit add ci/cd

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,4 +60,5 @@ jobs:
             source venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
-            nohup uvicorn main:app --host 0.0.0.0 --port 8000 &  # Runs FastAPI app in the background
+            uvicorn main:app --host 0.0.0.0 --port 8000 &  # Runs FastAPI app in the background
+            echo "Successfully deployed"
