--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -81,7 +81,35 @@ jobs:
             pip install --upgrade pip
             pip install -r requirements.txt
 
-            # Run FastAPI app with uvicorn in the background
-            echo "Running FastAPI app..."
+            # Create systemd service file (optional)
+            echo "Creating systemd service for FastAPI..."
 
-            echo "Successfully deployed"
+            cat <<EOF | sudo tee /etc/systemd/system/fastapi.service
+[Unit]
+Description=FastAPI Application
+After=network.target
+
+[Service]
+User=${{ secrets.SERVER_USER }}
+Group=${{ secrets.SERVER_USER }}
+WorkingDirectory=$PWD
+ExecStart=$PWD/venv/bin/uvicorn main:app --host 0.0.0.0 --port 8000
+Restart=always
+Environment="PATH=$PWD/venv/bin"
+Environment="PYTHONUNBUFFERED=1"
+
+[Install]
+WantedBy=multi-user.target
+EOF
+
+            # Reload systemd to recognize the new service
+            sudo systemctl daemon-reload
+
+            # Start or restart the FastAPI service
+            sudo systemctl restart fastapi.service
+
+            # Enable the service to start on boot
+            sudo systemctl enable fastapi.service
+
+            echo "Successfully deployed and FastAPI app is running as a service."
+
