Commit add ci/cd

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -83,6 +83,7 @@ jobs:
 
             # Start FastAPI using systemd
             echo "Starting FastAPI service..."
+            sudo systemctl daemon-reload
             sudo systemctl restart fastapi.service
 
             echo "Successfully deployed"
