--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -84,6 +84,8 @@ jobs:
             # Start FastAPI using systemd
             echo "Starting FastAPI service..."
             sudo systemctl daemon-reload
-            sudo systemctl restart fastapi.service
+            sudo systemctl stop fastapi.service
+            sudo systemctl start fastapi.service
+            sudo systemctl enable fastapi.service
 
-            echo "Successfully deployed"
+            echo "Deployment completed successfully!
