Commit add ci/cd

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -83,8 +83,8 @@ jobs:
 
             # Start FastAPI using systemd
             echo "Starting FastAPI service..."
-            sudo systemctl daemon-reload
             sudo systemctl stop fastapi.service
+            sudo systemctl disable fastapi.service
             sudo systemctl start fastapi.service
             sudo systemctl enable fastapi.service
 
